--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="portfolio_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:1000px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?89480"></script>
+		<script type="text/javascript" charset="utf-8" src="portfolio.hyperesources/portfolio_hype_generated_script.js?58302"></script>
 	</div>
 
 	<!-- end copy -->
@@ -46,7 +46,6 @@
 		<div>Andragogy</div>
 		<div>Profile</div>
 		<div>Cognitism & Connectivism</div>
-		<div>Learning Theory Table</div>
 		<div>Constructivism</div>
 		<div>Personal Learning Experiences</div>
 		<div>Micro Learning Project</div>
@@ -54,9 +53,15 @@
 		<div></div>
 		<div>Approaches & Assessment</div>
 		<div>Learning Theory Comparison</div>
+		<div>The Learner: Uses experimentation, past experience & problem solving to discover new knowledgeThe Instructor: Can influence retention by relating content to prior understood subjectsConnections: Similar to Cons.: learner creates learning, Conn.: learner researches experiences of othersNotes: Social Cognitism notes that observed experiences of others also contributes to knowledge</div>
+		<div>Learning Theories Citations</div>
+		<div>The Learner: Creates their own learning by expanding on presented knowledgeThe Instructor: Models ideas for learners to extrapolate, provides scaffolding supportConnections: Cognitism, Connectivism related through building knowledge on known conceptsNotes: Introduces the ZPD, where learners can create some knowledge without help</div>
+		<div>The Learner: Has their own agenda, seeks practical useable knowledge, likely to have preconceived notionsThe Instructor: Must be aware of pacing, prior perceptions, provide hands-on, applicable knowledgeConnections: Learning by doing and discovery overlaps strongly with Const. Cogn. and Conn. conceptsNotes: Adults learning is best when information is targeted and immediately implementable </div>
 		<div>Learning Theory Comparison
-
 </div>
+		<div>The Learner: Is passive, reacts to stimuli, and is a product of the environmentThe Instructor: Conditions by presenting performance-based stimuliConnections: Contradicts most other theories, but maybe the most familiar to older learnersNotes: Often referred to as conditioning, useful with animal training and simple tasks</div>
+		<div>The Learner: Creates learning by compiling knowledge through researchThe Instructor: Presents concepts, links, can facilitate large scale discussions, little presence neededConnections: Learner creates their own learning, can be a social activity as in Cogn. And Const.Notes: Greatly influenced by the widespread knowledge available in the digital age</div>
+		<div>A Behaviorism Learning Scenario ></div>
 		<div>Back</div>
 		<div>Ivan Pavlov was a Russian scientist who lived from 1849 to 1935. He did years of study on digestion in dogs, through creating an exteriorized portion of the dogs stomach. He later studied exteriorized salivary glands in both dogs and humans. Through studying salivary glands, he noticed how dogs would begin to salivate at the thought of it being time to eat, which he called “psychic secretion” - a characteristic of inherent Respondent behavior. His investigation into this gave birth to his famous experiment of ringing a bell before feeding dogs, which caused them to salivate at the sound of the bell without the scent of food being in the air. This was the beginning of Classical Conditioning, which showed how a reaction that would normally take place from one type of stimulus (food/salivation) can be created with an unrelated stimulus that becomes associated (bell ringing/food.)</div>
 		<div>Edward Thorndike was a Massachusettes born psychologist who lived from 1874 to 1949. His theories of Behaviorism focused on Operant behavior - the idea that behavior is the result of consequences of the environment, rather than Pavlov’s inherent behaviors to certain stimuli. He outlined the Law of Effect, that a consequence that reinforces or punishes will create likely predictable responses. The Law of Effect is sometimes compared to the idea of natural selection, where certain individual traits will persist due to environmental factors.
@@ -71,12 +76,13 @@
 </div>
 		<div>Behaviorism
 </div>
-		<div>Connectivism</div>
+		<div>Overlap</div>
 		<div>Cognitivism</div>
-		<div>Cognitism v Connectivism
+		<div>Cognitism and conectivism have been utilized regularly in my professional development. Cognitism based learning through experimentation is something that drives much of what I do in software training. To learn software inside and out, one can use previous knowledge to make assumptions about how new software will work, and combine that with willingness to try new paths and buttons, to discover functionality. Additionally, there is so much software support availalbe online, that Connectivsm is a primary modality for discovering better workflows and best practices in a software environment.</div>
+		<div>Connectivism</div>
+		<div>Cognitism and Connectivism
 
 </div>
-		<div>Overlap</div>
 		<div>Androgogy
 
 </div>
@@ -84,16 +90,16 @@
 </div>
 		<div>Learning Approach and Assessment: Gamification
 
-In addition to some of the concepts outlined by Edward R. O’Neill regarding game fundamentals (which rely heavily on sports analogies), I think there are two additional things that are fundamental in video games that aid in engagement. I am applying these ideas to my learning scenario. They are:
-
+Section 1 - Thought sand Overview:
+Gamifying lessons can be as simple as adding publicly visible badges and achivements for task completion. This is a commonly used process in gamification, but there are numerous other engagment concepts employed by games which can be utilized. In addition to some of the concepts outlined by Edward R. O’Neill regarding game fundamentals (which rely heavily on sports analogies), I think there are two additional things that are fundamental in video games that aid in engagement. I am applying these ideas to my learning scenario. They are:
 
 Fantastic, Unlikely, or Questionable GoalsUnlike sports and other “reality” based games, video games often are based on performing actions that one could not - or in some cases should not - perform in the real world. Street racing, fighting aliens or zombies, building giant castles from tiny blocks, guiding entire civilizations to grow, and make war or peace. Part of the appeal for many people is to experience something that they’d be unable to feel in reality, or unable to experience without the potential of detrimentally affecting their lives.
 
 CurrencyMany of the articles based on gamification discuss the use of experience points, or achievement points, as opposed to the standard percentage points used in grading. But another common thread in video games is currency. Mario’s coins, Sonic’s rings, gems, rupees, bottle caps are present in nearly any game.  Sometimes they merely raise the amount of points received upon completion of a level. But other times they can be used to protect you from a failure, give you a second chance, or let you procure gear or items that will allow you to progress through a challenge that you may not be fully prepared for. Getting stuck in a game is a motivation staller, and currency can often help prevent getting stuck.
 
-A Learning ScenarioA colleague that is an art history professor teaches a class that focuses on art theft. I always thought this was such an interesting and engaging way to teach about art. This approach is a brainstorm on how to gamify such a class for a blended platform. Goals of the class might be that students will be able to:
+Section 2 - A Learning ScenarioA colleague that is an art history professor teaches a class that focuses on art theft. I always thought this was such an interesting and engaging way to teach about art. This approach is a brainstorm on how to gamify such a class for a blended platform. Goals of the class might be that students will be able to:
 Name The most expensive paintings in the worldName The most famous stolen paintings Recognize the works of famous artists who’s paintings have been stolenDescribe Styles and techniques used in said paintingsIn the class, students take on the role of Art Thieves.  They are given a lessons such as:
-Choose a famous painting known for its high price sold at auction. Identify from the painting these criteria: style, a technique used, period, area of origin Based on those criteria, identify 3 other works that you feel would go for a high priceBring these paintings with a description to your “fence” (the teacher) and convince them of their worth. This is done via assignment post onlineTeacher assigns two sets of points. One for experience, based on the  based on the rarity of the works (did you pick the first one on the list in the google search, or did you do some discovery), on one set of value points the accuracy and quality of the descriptions. These points are converted a monetary value for each painting. Experience points count towards a final grade, and towards “levels” which unlock additional extra credit “quests”. Currency points can be used to forgive a missed assignment, or traded in for extra credit on an assessment.As paintings have been “purchased” they are posted on a “missing” list in the course. These paintings can no longer be used in subsequent lessons to force students to identify new worksThe paintings are then discussed in class to highlight before mentioned criteriaAn Assessment
+Choose a famous painting known for its high price sold at auction. Identify from the painting these criteria: style, a technique used, period, area of origin Based on those criteria, identify 3 other works that you feel would go for a high priceBring these paintings with a description to your “fence” (the teacher) and convince them of their worth. This is done via assignment post onlineTeacher assigns two sets of points. One for experience, based on the  based on the rarity of the works (did you pick the first one on the list in the google search, or did you do some discovery), on one set of value points the accuracy and quality of the descriptions. These points are converted a monetary value for each painting. Experience points count towards a final grade, and towards “levels” which unlock additional extra credit “quests”. Currency points can be used to forgive a missed assignment, or traded in for extra credit on an assessment.As paintings have been “purchased” they are posted on a “missing” list in the course. These paintings can no longer be used in subsequent lessons to force students to identify new worksThe paintings are then discussed in class to highlight before mentioned criteriaSection 3 - An Assessment
 An online interactive game. This game contains 3 galleries. The student is placed in the first gallery of paintings that are images only without descriptions. The student is given a list of criteria that the “fence” is looking for: An artist, a style, an era, a technique. The student must “steal” a total of 5 paintings from the gallery that reflects one of the criteria. If the painting reflects multiple criteria from that list, an additional value is associated with that painting. There is a time limit of 5 minutes to be in the gallery - this is to prevent the time it would take to look up work or use a google reverse image search. In that time there are 3 options: find all of the paintings you need, escape, or be caught (if time runs out.) If time runs out you only have the paintings you have selected up to that point. If you escape, you can be placed in the second gallery, same time limit and options, but different images and criteria, until you have 5 paintings total. So long as the task is completed, and each painting accurately reflects one of the criteria, the maximum grade is reached. If the paintings reflect multiple criterion per work, then additional currency points are rewarded.
 
 
@@ -108,12 +114,50 @@ Childhood: I remember as a child my mother insisting that I learn to type. She h
 Young Adult: In college I was taking several jazz harmony courses, which focused on the mathematics behind creating the music. I was in a 210 level course, and had just skated by in level 201. At one point in the class I was very lost, and when the teacher - asked if everyone was good, I explained that I wasn't. I had felt that I missed something in the 201 course. Dan took a moment to use a few different analogies and examples to explain the practical use and the why behind the subject, and everything clicked into place for me. This was a required learning subject, but I was studying music because I wanted to, so it was a mixture of things I wanted to learn and other's I wouldn't have chosen myself.
 
 Professional Development: I was in California studying how to provide one on one technical training to adults. In this course, the facilitator, an in-house corporate trainer, answered none of my questions and turned everyone back on me as another question. I became exceptionally frustrated with his use of the socratic method - even commenting on Socrates less than honorable demise. That frustration lead me to believe that I wouldn't find someone who'd be willing to give me answers, and I'd need to go out and find them myself. I was learning this to better support my job, which I loved. I couldn't see it at the time, but years later, my ability to find the answers I need is a strong suit, and I have a great love and respect for the efficacy of discovery-based learning.</div>
-		<div>Micro Learning Projects
+		<div>Micro Learning Project
 
-</div>
-		<div>Learning Theory Table
+Software: Blender (www.blender.org)
+Function: 3D Modeling and Animation that can be used in videos, vr, games
+Impetus for Learning: Creating 3D anatomy elements for a video on breath support for musicians
+Ties to: Androgogy, Professional Development, Cognitism, Connectivism, Discovery and Project Based Learning
 
+Blender is a powerful and challenging piece of software, with a fairly steep learning curve. There is extensive documentation, that would probably be more useful for someone with prior experience in 3D modeling applications. Since it is free and open source, changes are driven by a developer community, rather than by customer requests and payments, so there are often more voices calling for functionality and features than there are for ease of use.
+
+In learning free software, I found cognitism and connectivism to be two of the most useful methodologies. Having experience with animation and video software, ideas like keyframing and setting camera angles were familiar concepts, and I was able to experiment with those features to get perspective on how those worked in this application. However, as 3D modeling was something I had little experience on, extensive research on documentation and tutorial videos, as well as forum postings are how I found what I needed to work with the application.
+
+Of course, to make things more of a challenge for myself, I decided that I would learn this so that I could create a human diaphragm - the muscle used to expand and contract the lungs. This being an odd and abstract shape would mean that I had to learn several modeling techniques beyond beginner level to create it. So I looked for differing beginner level projects that I thought would be appropriate.
+
+I started by following a video series that taught how to 3D model a donut and a cup of coffee (from https://www.blenderguru.com) which are both simplistic shapes. Then I found other clips and forum postings about creating more abstract shapes and sculpting. My biggest aha moment was trying to compare such an abstract shape to something more common. It’s funny how you can extrapolate technique by learning about an unrelated thing - so one of the most useful tutorials I found to create this shape was how to sculpt a cartoon mushroom.
+
+For anyone interested, I highly recommend Andrew Price’s (BlenderGuru) series on YouTube.
 </div>
+		<div>My First 3D Model
+An Approximation of the
+Diaphragm Muscle during Breath</div>
+		<div>Citations in Learning Theory Definitions and Comparisons
+</div>
+		<div>Alejandra Ch (n.d.) ‘Comparing Learning Theories ~ Behaviorism,
+Cognitivism, Constructivism & Humanistic’ http://www.academia.edu/9332688/Comparing_Learning_Theories_ Behaviorism_Cognitivism_Constructivism_and_Humanistic_Learning_Theories_Comparison_Among_L._TheoriesBrook (2011) Learning Theories Comparison http://teegbj04.blogspot.com/2011/06/learning-theories-comparison.html Retrieved: 12/4/2018Educational Broadcasting Corporation (2004) ‘Concept to Classroom: What is constructivism?’ https://www.thirteen.org/edonline/concept2class/constructivism/
+
+
+Smith, M.K. (2002) ‘Jerome S. Bruner and the process of education’, the encyclopedia of informal education. http://infed.org/mobi/jerome-bruner-and-the-process-of-education/ Retrieved: 11/20/2018
+
+McLeod, S. A. (2016, Feb 05). Bandura - social learning theory. Retrieved from https://www.simplypsychology.org/bandura.html Retrieved: 11/20/2018
+
+McLeod, S. A. (2018). Edward Thorndike. Retrieved from https://www.simplypsychology.org/edward-thorndike.htmlWikipedia ‘Albert Bandura’ (n.d.) https://en.wikipedia.org/wiki/Albert_Bandura
+Wikipedia ‘B.F. Skinner’ (n.d.) https://en.wikipedia.org/wiki/B._F._Skinner
+Wikipedia ‘John B. Watson’ (n.d) https://en.wikipedia.org/wiki/John_B._Watson
+
+
+Images from commons.wikimedia.org
+</div>
+		<div>Scenario: Time Management and Awareness Testing A group of students are each asked to study a different subject. Each student is made to create and deliver a presentation on the subject to their peers. The maximum time of the presentation is five minutes, and the quality of information in the presentation is outlined in a rubric to ensure similar depth of information delivered. A timer is placed in the back of the room that the student presenter can see. Each student that goes over or under the allotted amount of time by more than thirty seconds loses a letter grade. For each 30 seconds beyond that, another letter grade is lost. Should a student have an obvious stall for time, or rush to complete, another letter grade is lost.
+
+The stimulus to stay on time would include several factors: The concern over the grade, the clock in the back of the room, and the teacher observing. The response would be to cognizant of the time on the clock to aim for the one minute leeway time to get the positive reinforcement of an A, or the negative reinforcement of continuously lowering grades.
+
+Pros: Students would be encouraged to practice and prepare, particularly those who do not have comfort performing in front of an audience. Students would experience timed scenarios, planning, and the need to adapt and modify content on the fly.
+
+Cons: Some students would panic at a time based challenge, and the more nervous they got the worse they would perform, ensuring too low of a grade. This could reinforce students not being willing to deliver content in the future, and create a fear of performance.</div>
 
 	</div>
 
